--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
